# RFClassifier-No-Extlib

./: CMakeLists.txt  LICENSE  readme.md
data/: bezdekIris.data
include/: Dataset.h  DecisionTree.h  RandomForest.h  TreeNode.h  util.h
src/: Dataset.cpp  DecisionTree.cpp  RandomForest.cpp  TreeNode.cpp  main.cpp
